# linuxdeployqt

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  excludelist.h  icon.desktop  main.cpp  shared.cpp  shared.h
.github/workflows/: build.yaml
cmake/: Deploy.cmake  Options.cmake  Setup.cmake  StandardSetup.cmake
deploy/Template.AppDir/: AppRun  linuxdeployqt.desktop
